JBTM-2685 fixes (and TODOs) for upgrade to build 9-ea+136